--- a/cookbooks/apache/templates/index.html.erb
+++ b/cookbooks/apache/templates/index.html.erb
@@ -1,3 +1,3 @@
-This is the webpage Configured from Chef from template
+This is the webpage Configured from Chef from template after setting the role
         <br> Hostname : <%= node['hostname'] %>
         <br> IP       : <%= node['ipaddress'] %>
