--- a/cookbooks/apache/templates/index.html.erb
+++ b/cookbooks/apache/templates/index.html.erb
@@ -1,3 +1,4 @@
 This is the webpage Configured from Chef from template after setting the role
+This is the new version of the website.
         <br> Hostname : <%= node['hostname'] %>
         <br> IP       : <%= node['ipaddress'] %>
